<resources>
    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">Name:</string>
    <string name="status">Status:</string>

    <string name="done">Done:</string>
    <string name="create_task">Create Task</string>
    <string name="note_label">Note:</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="done_label">Done</string>
    <string name="pending_label">Pending</string>
    <string name="delete_task">Delete</string>
    <string name="there_is_no_tasks">There is no Tasks</string>
</resources>
